fix: align profile

--- a/index.css
+++ b/index.css
@@ -800,6 +800,7 @@
   padding: 0 23px 0 var(--padding-5xl);
 }
 .user-profilesettings {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -807,6 +808,8 @@
   gap: 7px;
   min-width: 125px;
   font-size: 16px;
+  left: 1780px;
+  top:25px;
   font-family: var(--font-nunito-sans);
 }
 .user-container {
